@@ -1,0 +1,155 @@
+/* XPM */
+static char * gerbv_icon_xpm[] = {
+"48 48 104 2",
+"  	c None",
+". 	c #219494",
+"+ 	c #000000",
+"@ 	c #2CC4C4",
+"# 	c #37F2F2",
+"$ 	c #000200",
+"% 	c #010401",
+"& 	c #39FEFE",
+"* 	c #040D03",
+"= 	c #071505",
+"- 	c #081806",
+"; 	c #3AFFFF",
+"> 	c #030902",
+", 	c #061505",
+"' 	c #0B2308",
+") 	c #0F300B",
+"! 	c #12380D",
+"~ 	c #040F03",
+"{ 	c #0C2709",
+"] 	c #174811",
+"^ 	c #236C1A",
+"/ 	c #2C8721",
+"( 	c #309424",
+"_ 	c #020802",
+": 	c #081A06",
+"< 	c #12370D",
+"[ 	c #206318",
+"} 	c #2D8C22",
+"| 	c #35A328",
+"1 	c #37AA29",
+"2 	c #39AF2B",
+"3 	c #38AD2A",
+"4 	c #339E26",
+"5 	c #216619",
+"6 	c #0A1F07",
+"7 	c #154310",
+"8 	c #26741C",
+"9 	c #329B26",
+"0 	c #38AC2A",
+"a 	c #0A2008",
+"b 	c #174611",
+"c 	c #27781D",
+"d 	c #339F27",
+"e 	c #091E07",
+"f 	c #143F0F",
+"g 	c #236D1A",
+"h 	c #309624",
+"i 	c #37A929",
+"j 	c #38AE2A",
+"k 	c #020601",
+"l 	c #1C5715",
+"m 	c #297F1F",
+"n 	c #329925",
+"o 	c #35A428",
+"p 	c #030A02",
+"q 	c #133A0E",
+"r 	c #1D5B16",
+"s 	c #26761D",
+"t 	c #2B8520",
+"u 	c #39FCFC",
+"v 	c #061405",
+"w 	c #0D2809",
+"x 	c #15400F",
+"y 	c #1C5615",
+"z 	c #1F6117",
+"A 	c #35EAEA",
+"B 	c #061204",
+"C 	c #133D0F",
+"D 	c #1A5114",
+"E 	c #2ECBCB",
+"F 	c #081B06",
+"G 	c #10320C",
+"H 	c #1B5314",
+"I 	c #236E1B",
+"J 	c #287B1E",
+"K 	c #2AB9B9",
+"L 	c #37F4F4",
+"M 	c #051104",
+"N 	c #0E2B0A",
+"O 	c #194F13",
+"P 	c #2F9123",
+"Q 	c #339D26",
+"R 	c #000202",
+"S 	c #133B0E",
+"T 	c #226919",
+"U 	c #36A628",
+"V 	c #000101",
+"W 	c #0A1E07",
+"X 	c #164410",
+"Y 	c #216819",
+"Z 	c #2F9023",
+"` 	c #37AB2A",
+" .	c #051204",
+"..	c #0D280A",
+"+.	c #184B12",
+"@.	c #246E1B",
+"#.	c #020701",
+"$.	c #0B2108",
+"%.	c #11350D",
+"&.	c #164611",
+"*.	c #1A4F13",
+"=.	c #216518",
+"-.	c #1F6017",
+";.	c #FF1616",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                      .                         ",
+"            + + + + + + + + + + + + + + + + + + + + + + + + + + + + + @ + + + + +               ",
+"            + + + + + + + + + + + + + + + + + + + + + + + + + + + + + # + + + + +               ",
+"            + + + + + + + + + + + + + + $ % % % % $ + + + + + + + + + & + + + + +               ",
+"            + + + + + + + + + + + + $ % * = - - = * % $ + + + + + + + ; + + + + +               ",
+"            + + + + + + + + + + + $ > , ' ) ! ! ) ' , > $ + + + + + + ; + + + + +               ",
+"          . @ # & ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; & # @ .             ",
+"            + + + + + + + + + + $ ~ { ] ^ / ( ( / ^ ] { ~ $ + + + + + ; + + + + +               ",
+"            + + + + + + + + + + _ : < [ } | 1 1 | } [ < : _ + + + + 2 ; 2 2 3 4 5               ",
+"            + + + + + + + + + + > 6 7 8 9 0 2 2 2 2 2 2 2 2 2 2 2 2 2 ; 2 2 3 4 5               ",
+"            + + + + + + + + + + > a b c d 0 2 2 2 2 2 2 2 2 2 2 2 2 2 ; 2 2 3 4 5               ",
+"            + + + + + + + + + + > e f g h i j 2 2 2 2 2 2 2 2 2 2 2 2 ; + + + + +               ",
+"            + + + + + + + + + + k = ) l m n o o n m l ) = k + + + + + ; + + + + +               ",
+"            + + + + + + + + + + + p 6 q r s t t s r q 6 p + + + + + + u + + + + +               ",
+"            + # + ; + ; + ; + + + % v w x y z z y x w v % + + + + + + A + + + + +               ",
+"            + + + + + + + + + + + % B { C D r r D C { B % + + + + + + E + + + + +               ",
+"            + # + ; + ; + ; + + + p F G H I J J I H G F p + + + + + + K L ; & # @ .             ",
+"            + + + + + + + + + + % M N O s P Q Q P s O N M % + + R + + + + + + + +               ",
+"            + + + + + ; + ; + + _ F S T P U 0 0 U P T S F _ + + V + + + + + + + +               ",
+"            + + + + + + + + + + _ W X s Q 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 + + +               ",
+"            + + + + + ; + ; + + _ W X s Q 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 3 + +               ",
+"            + + + + + + + + + + _ F S Y Z U ` ` j j 3 3 3 3 3 3 3 3 3 3 3 3 0 Q +               ",
+"            + + + + + # + # + + %  ...+.@./ ( ( / @.+... .% + + + + + + 4 4 Q Z +               ",
+"            + + + + + + + + + + + #.B $.%.&.*.*.&.%.$.B #.+ + + + + + + 5 5 =.-.+               ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"              ;.;.;.                                      ;.;.                                  ",
+"          ;.;.;.;.;.;.                                    ;.;.                                  ",
+"        ;.;.                                              ;.;.                                  ",
+"        ;.;.                ;.;.;.          ;.    ;.;.    ;.;.  ;.;.      ;.;.        ;.        ",
+"      ;.;.                ;.;.  ;.;.;.    ;.;.;.;.;.;.;.  ;.;.;.;.;.;.    ;.;.;.      ;.        ",
+"      ;.;.          ;.  ;.;.      ;.;.    ;.;.;.;.  ;.;.  ;.;.;.  ;.;.;.    ;.;.    ;.;.        ",
+"      ;.;.        ;.;.;.;.;.;.;.;.;.;.    ;.;.;.          ;.;.      ;.;.    ;.;.    ;.          ",
+"        ;.;.      ;.;.;.;.;.              ;.;.            ;.;.      ;.;.    ;.;.;.;.;.          ",
+"        ;.;.;.    ;.;.  ;.;.              ;.;.            ;.;.    ;.;.;.      ;.;.;.            ",
+"          ;.;.;.;.;.;.    ;.;.;.;.;.;.    ;.;.            ;.;.;.;.;.;.        ;.;.;.            ",
+"              ;.;.;.        ;.;.;.;.        ;.            ;.    ;.;.            ;.              ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                ",
+"                                                                                                "};
